<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.MovieDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/detail_horizontal_margin"
            android:paddingRight="@dimen/detail_horizontal_margin">

            <ImageView
                android:contentDescription="@string/desc"
                android:id="@+id/movie_poster"
                android:layout_width="@dimen/movie_poster_width_for_detail"
                android:layout_height="@dimen/movie_poster_height_for_detail"
                android:layout_marginBottom="@dimen/movie_poster_vertical_padding"
                android:layout_marginRight="@dimen/movie_poster_padding_right"
                android:layout_marginEnd="@dimen/movie_poster_padding_right"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    tools:text="@string/movie_title"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_title_bottom_margin"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:layout_marginStart="@dimen/detail_title_left_padding"
                    android:textColor="@color/text_color_for_movie_overview"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/detail_title_bottom_margin"
                    android:layout_marginStart="@dimen/detail_title_left_padding"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:layout_height="wrap_content">

                    <TextView
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/user_rating"
                        android:textColor="@color/text_color_for_movie_overview"
                        android:textIsSelectable="true" />

                    <TextView
                        android:paddingLeft="@dimen/detail_horizontal_margin"
                        android:paddingStart="@dimen/detail_horizontal_margin"
                        android:paddingRight="@dimen/zero"
                        android:paddingEnd="@dimen/zero"
                        android:id="@+id/movie_user_rating"
                        tools:text="@string/sample_rating_movie"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_for_movie_overview"
                        android:textIsSelectable="true" />


                    <TextView
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textColor="@color/text_color_for_movie_overview"
                        android:textIsSelectable="true" />

                    <TextView
                        android:paddingLeft="@dimen/detail_horizontal_margin"
                        android:paddingStart="@dimen/detail_horizontal_margin"
                        android:paddingRight="@dimen/zero"
                        android:paddingEnd="@dimen/zero"
                        tools:text="@string/sample_release_date"
                        android:id="@+id/movie_release_date"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_for_movie_overview"
                        android:textIsSelectable="true" />

                </LinearLayout>

                <include layout="@layout/favorite_buttons" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_overview"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/detail_horizontal_margin"
            android:paddingRight="@dimen/detail_horizontal_margin"
            android:paddingTop="@dimen/movie_overview_padding_top"
            android:textColor="@color/text_color_for_movie_overview"
            android:textIsSelectable="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_list"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/trailer_list_left_padding"
            android:layout_marginStart="@dimen/trailer_list_left_padding"
            android:layout_marginRight="@dimen/trailer_list_right_padding"
            android:layout_marginEnd="@dimen/trailer_list_right_padding"
            android:layout_marginTop="@dimen/trailer_list_vertical_padding"
            tools:listitem="@layout/trailer_list_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/review_list_content" />

    </LinearLayout>
</LinearLayout>